--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -2,11 +2,11 @@ name: Team awesome´s approval workflow
 on: pull_request_review
 jobs:
   labelWhenApproved:
-    name: Label approved pull requests
+    name: Label when approved
     runs-on: ubuntu-latest
     steps:
     - name: Label when approved
-      uses: pullreminders/label-when-approved-action@master        
+      uses: pullreminders/label-when-approved-action@master
       env:
         APPROVALS: "1"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
