--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -5,7 +5,7 @@ jobs:
     name: Label when approved
     runs-on: ubuntu-latest
     steps:
-    - name: Label when approved
+    - name: Label when approved steps
       uses: pullreminders/label-when-approved-action@master
       env:
         APPROVALS: "1"
